decompiler/tests/snapshots/test_tool__x86_64_callconv__func017.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
 --- mil
program  64 instrs
    0 r12 <- Ancestral { anc_name: AncestralName("stack_bottom"), reg_type: Bytes(8) }
    1 r3 <- Ancestral { anc_name: AncestralName("PF"), reg_type: Bool }
    2 r4 <- Ancestral { anc_name: AncestralName("AF"), reg_type: Bool }
    3 r5 <- Ancestral { anc_name: AncestralName("ZF"), reg_type: Bool }
    4 r6 <- Ancestral { anc_name: AncestralName("SF"), reg_type: Bool }
    5 r7 <- Ancestral { anc_name: AncestralName("TF"), reg_type: Bool }
    6 r8 <- Ancestral { anc_name: AncestralName("IF"), reg_type: Bool }
    7 r9 <- Ancestral { anc_name: AncestralName("DF"), reg_type: Bool }
    8 r10 <- Ancestral { anc_name: AncestralName("OF"), reg_type: Bool }
    9 r11 <- Ancestral { anc_name: AncestralName("RBP"), reg_type: Bytes(8) }
   10 r12 <- Ancestral { anc_name: AncestralName("RSP"), reg_type: Bytes(8) }
   11 r13 <- Ancestral { anc_name: AncestralName("RIP"), reg_type: Bytes(8) }
   12 r14 <- Ancestral { anc_name: AncestralName("RDI"), reg_type: Bytes(8) }
   13 r15 <- Ancestral { anc_name: AncestralName("RSI"), reg_type: Bytes(8) }
   14 r16 <- Ancestral { anc_name: AncestralName("RAX"), reg_type: Bytes(8) }
   15 r17 <- Ancestral { anc_name: AncestralName("RBX"), reg_type: Bytes(8) }
   16 r18 <- Ancestral { anc_name: AncestralName("RCX"), reg_type: Bytes(8) }
   17 r19 <- Ancestral { anc_name: AncestralName("RDX"), reg_type: Bytes(8) }
   18 r20 <- Ancestral { anc_name: AncestralName("R8"), reg_type: Bytes(8) }
   19 r21 <- Ancestral { anc_name: AncestralName("R9"), reg_type: Bytes(8) }
   20 r22 <- Ancestral { anc_name: AncestralName("R10"), reg_type: Bytes(8) }
   21 r23 <- Ancestral { anc_name: AncestralName("R11"), reg_type: Bytes(8) }
   22 r24 <- Ancestral { anc_name: AncestralName("R12"), reg_type: Bytes(8) }
   23 r25 <- Ancestral { anc_name: AncestralName("R13"), reg_type: Bytes(8) }
   24 r26 <- Ancestral { anc_name: AncestralName("R14"), reg_type: Bytes(8) }
   25 r27 <- Ancestral { anc_name: AncestralName("R15"), reg_type: Bytes(8) }
   26 r28 <- Ancestral { anc_name: AncestralName("ZMM0"), reg_type: Bytes(64) }
   27 r29 <- Ancestral { anc_name: AncestralName("ZMM1"), reg_type: Bytes(64) }
   28 r30 <- Ancestral { anc_name: AncestralName("ZMM2"), reg_type: Bytes(64) }
   29 r31 <- Ancestral { anc_name: AncestralName("ZMM3"), reg_type: Bytes(64) }
   30 r32 <- Ancestral { anc_name: AncestralName("ZMM4"), reg_type: Bytes(64) }
   31 r33 <- Ancestral { anc_name: AncestralName("ZMM5"), reg_type: Bytes(64) }
   32 r34 <- Ancestral { anc_name: AncestralName("ZMM6"), reg_type: Bytes(64) }
   33 r35 <- Ancestral { anc_name: AncestralName("ZMM7"), reg_type: Bytes(64) }
   34 r36 <- Ancestral { anc_name: AncestralName("ZMM8"), reg_type: Bytes(64) }
   35 r37 <- Ancestral { anc_name: AncestralName("ZMM9"), reg_type: Bytes(64) }
   36 r38 <- Ancestral { anc_name: AncestralName("ZMM10"), reg_type: Bytes(64) }
   37 r39 <- Ancestral { anc_name: AncestralName("ZMM11"), reg_type: Bytes(64) }
   38 r40 <- Ancestral { anc_name: AncestralName("ZMM12"), reg_type: Bytes(64) }
   39 r41 <- Ancestral { anc_name: AncestralName("ZMM13"), reg_type: Bytes(64) }
   40 r42 <- Ancestral { anc_name: AncestralName("ZMM14"), reg_type: Bytes(64) }
   41 r43 <- Ancestral { anc_name: AncestralName("ZMM15"), reg_type: Bytes(64) }
   42 r45 <- Ancestral { anc_name: AncestralName("arg0"), reg_type: Bytes(32) }
   43 r47 <- Part { src: r45, offset: 0, size: 8 }
   44 r46 <- ArithK(Add, r12, 8)
   45 r46 <- StoreMem { addr: r46, value: r47 }
   46 r47 <- Part { src: r45, offset: 8, size: 8 }
   47 r46 <- ArithK(Add, r12, 16)
   48 r46 <- StoreMem { addr: r46, value: r47 }
   49 r47 <- Part { src: r45, offset: 16, size: 8 }
   50 r46 <- ArithK(Add, r12, 24)
   51 r46 <- StoreMem { addr: r46, value: r47 }
   52 r47 <- Part { src: r45, offset: 24, size: 8 }
   53 r46 <- ArithK(Add, r12, 32)
   54 r46 <- StoreMem { addr: r46, value: r47 }
0x40115f:
   55 r46 <- Int { value: 24, size: 8 }
   56 r46 <- Arith(Add, r46, r12)
   57 r45 <- LoadMem { addr: r46, size: 8 }
   58 r16 <- Get(r45)
0x401164:
   59 r45 <- Void
   60 r45 <- Concat { lo: r45, hi: r16 }
   61 r45 <- Part { src: r45, offset: 0, size: 8 }
   62 r47 <- SetReturnValue(r45)
   63 r47 <- Control(Ret)


 --- ssa pre-xform
ssa program  64 instrs
.B0:    ;;  → Always(Return).
  (  5)  r10 <- Ancestral { anc_name: AncestralName("RSP"), reg_type: Bytes(8) }
  (  4)  r42 <- Ancestral { anc_name: AncestralName("arg0"), reg_type: Bytes(32) }
         r43 <- Part { src: r42, offset: 0, size: 8 }
         r44 <- ArithK(Add, r10, 8)
         r45 <- StoreMem { addr: r44, value: r43 }
         r46 <- Part { src: r42, offset: 8, size: 8 }
         r47 <- ArithK(Add, r10, 16)
         r48 <- StoreMem { addr: r47, value: r46 }
         r49 <- Part { src: r42, offset: 16, size: 8 }
         r50 <- ArithK(Add, r10, 24)
         r51 <- StoreMem { addr: r50, value: r49 }
         r52 <- Part { src: r42, offset: 24, size: 8 }
         r53 <- ArithK(Add, r10, 32)
         r54 <- StoreMem { addr: r53, value: r52 }
         r55 <- Int { value: 24, size: 8 }
         r56 <- Arith(Add, r55, r10)
         r57 <- LoadMem { addr: r56, size: 8 }
         r60 <- Concat { lo: r59, hi: r57 }
         r61 <- Part { src: r60, offset: 0, size: 8 }
         r62 <- SetReturnValue(r61)


 --- cfg
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r10, r42, r44, r45, r46, r47, r48, r49, r50, r51, r52, r53, r54, r62]
  domtree:
    BlockID(0)

 --- ssa
ssa program  69 instrs
.B0:    ;;  → Always(Return).
  (  4)  r10 <- Ancestral { anc_name: AncestralName("RSP"), reg_type: Bytes(8) }
  (  4)  r42 <- Ancestral { anc_name: AncestralName("arg0"), reg_type: Bytes(32) }
         r44 <- ArithK(Add, r10, 8)
         r45 <- StoreMem { addr: r44, value: r42 }
         r46 <- StructGetMember { struct_value: r42, name: "member1", size: 32 }
         r47 <- ArithK(Add, r10, 16)
         r48 <- StoreMem { addr: r47, value: r46 }
  (  2)  r49 <- Part { src: r42, offset: 16, size: 8 }
         r50 <- ArithK(Add, r10, 24)
         r51 <- StoreMem { addr: r50, value: r49 }
         r52 <- Part { src: r42, offset: 24, size: 8 }
         r53 <- ArithK(Add, r10, 32)
         r54 <- StoreMem { addr: r53, value: r52 }
         r62 <- SetReturnValue(r49)


 --- ast

T0: {
  [pre:RSP + 8]:* := pre:arg0;
  [pre:RSP + 16]:* := pre:arg0.member1;
  let r49: Bytes(8) = pre:arg0[24 .. 16];
  [pre:RSP + 24]:* := r49;
  [pre:RSP + 32]:* := pre:arg0[32 .. 24];
  ;
  return r49
}
